// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image snapshot > Image demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-image"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "fill",
        }
      }
    />
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "wrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <div
    className="bui-image"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      alt="contain"
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "contain",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      alt="cover"
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "cover",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      alt="fill"
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "fill",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      alt="none"
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "none",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      alt="scale-down"
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "scale-down",
        }
      }
    />
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <div
    className="bui-image"
    style={
      {
        "borderRadius": 4,
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "cover",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "borderRadius": 8,
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "cover",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "borderRadius": 32,
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg"
      style={
        {
          "objectFit": "cover",
        }
      }
    />
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <div
    className="bui-image"
    style={
      {
        "borderRadius": 4,
        "height": 100,
        "width": 100,
      }
    }
  >
    <div
      className="bui-image-default-icon-wrap"
    >
      <div
        className="bui-image-default-icon-item"
      />
    </div>
    <img
      className="bui-image-img"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://localhost:3000/failed"
      style={
        {
          "objectFit": "cover",
        }
      }
    />
  </div>
  <div
    className="bui-image"
    style={
      {
        "borderRadius": 4,
        "height": 100,
        "width": 100,
      }
    }
  >
    <img
      className="bui-image-img bui-image-loaded"
      loading="eager"
      onError={[Function]}
      onLoad={[Function]}
      src="https://localhost:3000/failed"
      style={
        {
          "objectFit": "cover",
        }
      }
    />
  </div>
</div>
`;

exports[`Image snapshot > Image demo snapshot 0 5`] = `
[
  <button
    className="bui-btn bui-btn-outlined bui-btn-medium"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    重新加载
  </button>,
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "8px",
      }
    }
  >
    <div
      className="bui-image"
      style={
        {
          "height": 100,
          "width": 100,
        }
      }
    >
      <img
        className="bui-image-img bui-image-loaded"
        loading="eager"
        onError={[Function]}
        onLoad={[Function]}
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg?t=0"
        style={
          {
            "objectFit": "fill",
          }
        }
      />
    </div>
    <div
      className="bui-image"
      style={
        {
          "height": 100,
          "width": 100,
        }
      }
    >
      <div
        className="bui-image-default-icon-wrap"
      >
        <div
          className="bui-image-default-icon-item"
        />
      </div>
      <img
        className="bui-image-img"
        loading="eager"
        onError={[Function]}
        onLoad={[Function]}
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg?t=0"
        style={
          {
            "objectFit": "fill",
          }
        }
      />
    </div>
    <div
      className="bui-image"
      style={
        {
          "height": 100,
          "width": 100,
        }
      }
    >
      <div
        className="bui-image-default-icon-wrap"
      >
        <div
          style={
            {
              "background": "red",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
      <img
        className="bui-image-img"
        loading="eager"
        onError={[Function]}
        onLoad={[Function]}
        src="https://gw.alicdn.com/i2/O1CN01D7yqW229UZMB5eh00_!!6000000008071-0-alipicbeacon.jpg?t=0"
        style={
          {
            "objectFit": "fill",
          }
        }
      />
    </div>
  </div>,
]
`;
